# Base_Example_ROS2

./: .gitignore  README.md
src/inverse_kin/: package.xml  setup.py
src/inverse_kin/inverse_kin/: TrajectoryServer.py  XYZServerGazebo.py
src/my_robot_bringup/: package.xml
src/my_robot_bringup/config/: rob_param.yaml
src/my_robot_bringup/launch/: ros_gazebo.launch.xml
src/my_robot_desc/: CMakeLists.txt  package.xml
src/my_robot_desc/config/: controllers.yaml
src/my_robot_desc/rviz/: UR_new.rviz
src/my_robot_desc/urdf/: inertias.xacro  materials.xacro  ur_robot.urdf.xacro
src/my_robot_interfaces/: CMakeLists.txt  package.xml
