<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_bringup</name>
  <version>0.0.0</version>
  <description>Launch files and configuration for bringing up the robot arm simulation in Gazebo with ROS2 control.</description>
  <maintainer email="oliver.ochoa2@iberopuebla.mx">oliver</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>myrobot_pkg</exec_depend>
  <exec_depend>oliver_turtle</exec_depend>
  <exec_depend>turtlesim</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
